--- a/tests/game_config/game.cfg
+++ b/tests/game_config/game.cfg
@@ -1,4 +1,4 @@
 [global]
-channel=http://127.0.0.1:5000/channel/spicyhorse/bhb
+channel="http://127.0.0.1:5000/channel/sh/aka/"
+executable="MAC/CrazyFairies.app/Contents/MacOS/Crazy Fairies"
 play_on_error=True
-executable=Chess.app/Contents/MacOS/Chess
