--- a/tests/game_config/game.cfg
+++ b/tests/game_config/game.cfg
@@ -1,4 +1,51 @@
 [global]
-channel="http://127.0.0.1:5000/channel/sh/aka/"
-executable="MAC/CrazyFairies.app/Contents/MacOS/Crazy Fairies"
+channel="http://delivery.spicyhorse.com/channel/spicyhorse/aka/"
+executable="mac/Akaneiro.app/Contents/MacOS/Akaneiro"
 play_on_error=True
+
+[gui]
+main_window_w = 889
+main_window_h = 654
+main_window_frame = frame.png
+main_window_ads = poster_01.png, poster_02.png, poster_03.png, poster_04.png
+main_window_ads_fx = 41
+main_window_ads_fy = 202
+
+main_window_settings_x = 786
+main_window_settings_y = 151
+main_window_settings_w = 32
+main_window_settings_h = 32
+main_window_settings_on = settings_on.png
+main_window_settings_off = settings_off.png
+
+main_window_close_x = 824
+main_window_close_y = 151
+main_window_close_w = 32
+main_window_close_h = 32
+main_window_close_on = close_on.png
+main_window_close_off = close_off.png
+
+main_window_play_x = 566
+main_window_play_y = 480
+main_window_play_w = 139
+main_window_play_h = 135
+main_window_play_on = play_on.png
+main_window_play_off = play_off.png
+
+main_window_progress_x = 223
+main_window_progress_y = 449
+main_window_progress_w = 438
+main_window_progress_h = 190
+main_window_progress_dx = 100
+main_window_progress_dy = 94
+main_window_progress_dw = 216
+main_window_progress_dh = 29
+main_window_progress_back = progress_back.png
+main_window_progress_front = progress_front.png
+main_window_progress_frame = progress_frame.png
+
+main_window_progress_text_x = 255
+main_window_progress_text_y = 575
+main_window_progress_text_w = 347
+main_window_progress_text_h = 67
+main_window_progress_text_style = "color: rgb(255,220,120); qproperty-alignment: 'AlignHCenter | AlignTop';"
