--- a/tests/game_config/game.cfg
+++ b/tests/game_config/game.cfg
@@ -7,7 +7,7 @@ play_on_error=True
 main_window_w = 889
 main_window_h = 654
 main_window_frame = frame.png
-main_window_ads = poster_01.png, poster_02.png, poster_03.png, poster_04.png
+main_window_ads = poster_01.png, poster_02.png, poster_03.png, poster_04.png, poster_05.png, poster_06.png, poster_07.png, poster_08.png, poster_09.png, poster_10.png
 main_window_ads_fx = 41
 main_window_ads_fy = 202
 
