platform dependent storage path

--- a/tests/game_config/game.cfg
+++ b/tests/game_config/game.cfg
@@ -1,4 +1,5 @@
 [global]
+name=akaneiro
 channel="http://delivery.spicyhorse.com/channel/spicyhorse/aka/"
 executable="mac/Akaneiro.app/Contents/MacOS/Akaneiro"
 play_on_error=True
