libtorrent invokation with path in raw utf

--- a/tests/game_config/game.cfg
+++ b/tests/game_config/game.cfg
@@ -1,6 +1,6 @@
 [global]
 name=akaneiro
-channel="http://delivery.spicyhorse.com/channel/spicyhorse/aka/"
+channel="http://127.0.0.1:5000/channel/spicyhorse/aka/"
 executable="mac/Akaneiro.app/Contents/MacOS/Akaneiro"
 play_on_error=True
 
@@ -26,15 +26,15 @@ main_window_close_h = 32
 main_window_close_on = close_on.png
 main_window_close_off = close_off.png
 
-main_window_play_x = 566
-main_window_play_y = 480
+main_window_play_x = 385
+main_window_play_y = 500
 main_window_play_w = 139
 main_window_play_h = 135
 main_window_play_on = play_on.png
 main_window_play_off = play_off.png
 
-main_window_progress_x = 223
-main_window_progress_y = 449
+main_window_progress_x = 43
+main_window_progress_y = 469
 main_window_progress_w = 438
 main_window_progress_h = 190
 main_window_progress_dx = 100
@@ -45,8 +45,8 @@ main_window_progress_back = progress_back.png
 main_window_progress_front = progress_front.png
 main_window_progress_frame = progress_frame.png
 
-main_window_progress_text_x = 255
-main_window_progress_text_y = 575
+main_window_progress_text_x = 525
+main_window_progress_text_y = 540
 main_window_progress_text_w = 347
 main_window_progress_text_h = 67
-main_window_progress_text_style = "color: rgb(255,220,120); qproperty-alignment: 'AlignHCenter | AlignTop';"
+main_window_progress_text_style = "color: rgb(240,240,240); qproperty-alignment: 'AlignLeft | AlignVCenter';"
